--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -10,8 +10,8 @@ body {
 
 .container {
 	background: #23252c;
-	width: 550px;
-	height: 900px;
+	width: 100vw;
+	height: 100vh;
 	margin: 0 auto;
 	display: flex;
 
